@@ -31,25 +31,22 @@ profile=1,0, default is 0 - build without profiling -pg option
 resolver=no, global, cares, default is no. If "global" 
 (global DNS cache) enabled, prevent usage with -t (threads) option.
 
-4. Problem of the smooth mode is that it loads url after url without
-respecting the interleave timeouts. Add the timer-queque scheduling.
-
-5. Support for CAPS (calls per second) defined mode. Currently, we
+4. Support for CAPS (calls per second) defined mode. Currently, we
 are supporting only a certain number of virtual clients and CAPS is the derived
 parameter. CAPS-MODE should support a certain number of CAPS, 
 and virtual clients number to be the derived parameter. 
 
-6. When login failed due to server-error, we should not proceeed with UAS
+5. When login failed due to server-error, we should not proceeed with UAS
 and logoff, instead re-attempt the login. This is the behavior of the 
 smooth mode on libcurl error, and should be extended to 5xx server 
 errors, etc
 
-7. Rewind of the logfile for smooth-mode. It works only for storming mode now.
+6. Rewind of the logfile for smooth-mode. It works only for storming mode now.
 
-8. There are some issues with FTP load, that will be resolved by the upcoming
+7. There are some issues with FTP load, that will be resolved by the upcoming
     release of libcurl. 
 
-9. Future releases will hopefully incorporate libcurl HYPER API, using 
+8. Future releases will hopefully incorporate libcurl HYPER API, using 
 curl_multi_socket() approach and epoll support by libevent as in
 http://curl.haxx.se/lxr/source/hiper/hipev.c Thus, 50000, 100000 clients
 from a single process can become a reality.
