@@ -28,7 +28,7 @@ UAS_URL_INTERLEAVE_TIME = 0
 
 UAS_URL= http://localhost/apache2-default/index.html
 UAS_URL_MAX_TIME = 4
-UAS_URL_INTERLEAVE_TIME = 2
+UAS_URL_INTERLEAVE_TIME = 2000
 
 ########### LOGOFF SECTION #################################
 LOGOFF=n
