@@ -23,8 +23,8 @@ UAS=y
 UAS_URLS_NUM = 1
 
 UAS_URL=ftp://anonymous:stam@127.0.0.1/curl-7.16.0.tar.gz
-UAS_URL_MAX_TIME = 90 # storm-mode requires sometimes high timeouts for ftp,
-UAS_URL_INTERLEAVE_TIME = 2
+UAS_URL_MAX_TIME = 30 # storm-mode requires sometimes high timeouts for ftp,
+UAS_URL_INTERLEAVE_TIME = 2000
 
 #UAS_URL= http://localhost/apache2-default/index.html
 #UAS_URL_MAX_TIME = 4
